fix(gcds-link): Display property to allow normal link wrap behaviour

--- a/packages/web/src/components/gcds-link/gcds-link.css
+++ b/packages/web/src/components/gcds-link/gcds-link.css
@@ -2,7 +2,7 @@
 
 @layer reset {
   :host {
-    display: inline-block;
+    display: inline;
 
     slot {
       display: initial;
